--- a/exercicios/ex0026/mq05/estilos/media-query.css
+++ b/exercicios/ex0026/mq05/estilos/media-query.css
@@ -1,5 +1,5 @@
-@media screen and (min-width: 768px) {
-    #burguer {
+@media screen and (min-width: 768px){
+    i#burguer {
         display: none;
     }
 
